# LifeinWeeks

./: .gitignore  README.md  pyproject.toml
LifeinWeeks/: calculations.py  cli.py  dateparser.py
